# vid-creation

./: README.md  render.yaml
backend/: .dockerignore  .firebaserc  .gitignore  Dockerfile  GEMINI.md  app.py  firebase.json  openapi.yaml  pyproject.toml
backend/.cursor/rules/: backend.mdc
backend/api/v1/: video.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/infra/: .gitignore  Dockerfile  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.stage.yaml  Pulumi.yaml  __main__.py  __main__.py.backup  __main__.py.cors_backup
backend/scripts/: dev.sh  export_openapi.py  generate_types.py  list_gcs_files.py  stage.sh  test_gcs.sh
backend/src/: config.py  main.py
backend/src/agent/: video.py
backend/src/api/: 3d.py  asset.py  auth.py  job.py  middleware.py  video.py  webhooks.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/database/: firebase.py  firebase_auth.py  firebase_storage.py  firestore.py  gcs.py  mock_db.py  models.py  schemas.py
backend/src/database/repositories/: base.py  firebase_repository.py
backend/src/dependencies/: dependencies_repository.py  dependencies_request.py
backend/src/repositories/: __init__.py  base.py  gcp_repository.py  gcp_repository.py.backup  gcp_repository.py.backup2
backend/src/schemas/: asset.py  job.py  user.py
backend/src/services/: auth_service.py  job_processor.py  job_service.py
frontend/: .gitignore  Dockerfile  GEMINI.md  index.html  package-lock.json  package.json  render.yaml  temp_login_fix.tsx  vite.config.ts
(+111 files in other folders)
