[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python>=4.12.0.88",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "google-cloud-firestore>=2.11.0",
    "google-cloud-storage>=2.10.0",
    "workos>=2.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.20",
    "pulumi>=3.187.0",
    "pulumi-gcp>=8.39.0",
    "replicate>=1.0.7",
    "python-dotenv>=1.0.0",
]

[project.scripts]
generate-types = "scripts.generate_types:main"
